Refactor project structure and add some basics APIs with MySQL